--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.link-item {
+  text-decoration: none;
+}
+
+.text-style {
+  text-align: left;
+}
